--- a/chromatic_matroids/pyproject.toml
+++ b/chromatic_matroids/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 license = "MIT"
-license-files = ["LICENSE*"]
+license-files = ["LICENSE"]
 
 [project.urls]
 Homepage = "https://github.com/raulpenaguiao/chromatic-matroids/chromatic-matroids"
