--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 chromatic_matroids/dist/*
+chromatic_matroids/src/chromatic_matroids/__pycache__/*
+chromatic_matroids/src/chromatic_matroids/test_script.py
+
+myenv/*
